// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-formatjs-localized-bundle Compiles when there is no callback and no translations to match the IDs 1`] = `
"var x = /*#__PURE__*/React.createElement(\\"div\\", null, /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"AST\\",
  defaultMessage: \\"Default message 1\\"
}), /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"FIRST_ID\\",
  defaultMessage: \\"Default message 1\\"
}), /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"NEXT_ID\\",
  defaultMessage: \\"Default message {variable} 2\\",
  values: {
    variable: \\"22\\"
  }
}), /*#__PURE__*/React.createElement(LocalMsg, {
  values: {
    variable: \\"33\\"
  },
  defaultMessage: \\"Default message {variable} 3\\"
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  defaultMessage: \\"Default message 1\\"
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  defaultMessage: \\"Default message {variable} 2\\",
  values: {
    variable: \\"22\\"
  }
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  id: \\"FIRST_ID_FORMATTED\\",
  values: {
    variable: \\"33\\"
  },
  defaultMessage: \\"Default message {variable} 3\\"
}), localize({
  defaultMessage: \\"Default message 4\\",
  id: \\"FIRST_ID_LOCALIZE\\"
}), localize({
  defaultMessage: \\"Default message {variable} 5\\",
  id: \\"NEXT_ID_LOCALIZE\\"
}, {
  variable: \\"55\\"
}), localize({
  defaultMessage: \\"Default message {variable} 6\\",
  description: \\"A\\"
}, {
  variable: \\"66\\"
}), localize({
  description: \\"B\\",
  defaultMessage: \\"Default message {variable} 7\\"
}, {
  variable: \\"77\\"
}), LocalizationStore.get().intl.formatMessage({
  description: \\"B\\",
  defaultMessage: \\"Default message {variable} 7\\",
  id: \\"FIRST_ID_INTL\\"
}, {
  variable: \\"77\\"
}));"
`;

exports[`babel-plugin-formatjs-localized-bundle exits gracefully when there are no translations 1`] = `
"var x = /*#__PURE__*/React.createElement(\\"div\\", null, /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"AST\\",
  defaultMessage: \\"Default message 1\\"
}), /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"FIRST_ID\\",
  defaultMessage: \\"Default message 1\\"
}), /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"NEXT_ID\\",
  defaultMessage: \\"Default message {variable} 2\\",
  values: {
    variable: \\"22\\"
  }
}), /*#__PURE__*/React.createElement(LocalMsg, {
  values: {
    variable: \\"33\\"
  },
  defaultMessage: \\"Default message {variable} 3\\"
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  defaultMessage: \\"Default message 1\\"
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  defaultMessage: \\"Default message {variable} 2\\",
  values: {
    variable: \\"22\\"
  }
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  id: \\"FIRST_ID_FORMATTED\\",
  values: {
    variable: \\"33\\"
  },
  defaultMessage: \\"Default message {variable} 3\\"
}), localize({
  defaultMessage: \\"Default message 4\\",
  id: \\"FIRST_ID_LOCALIZE\\"
}), localize({
  defaultMessage: \\"Default message {variable} 5\\",
  id: \\"NEXT_ID_LOCALIZE\\"
}, {
  variable: \\"55\\"
}), localize({
  defaultMessage: \\"Default message {variable} 6\\",
  description: \\"A\\"
}, {
  variable: \\"66\\"
}), localize({
  description: \\"B\\",
  defaultMessage: \\"Default message {variable} 7\\"
}, {
  variable: \\"77\\"
}), LocalizationStore.get().intl.formatMessage({
  description: \\"B\\",
  defaultMessage: \\"Default message {variable} 7\\",
  id: \\"FIRST_ID_INTL\\"
}, {
  variable: \\"77\\"
}));"
`;

exports[`babel-plugin-formatjs-localized-bundle transformers code that has been compiled by babel 1`] = `
"var StubLocalizationComponent = function StubLocalizationComponent() {
  return /*#__PURE__*/_react[\\"default\\"].createElement(_react[\\"default\\"].Fragment, null, /*#__PURE__*/_react[\\"default\\"].createElement(LocalMsg, {
    id: \\"0dBLIo\\",
    defaultMessage: \\"[NON-IMPERATIVE]\\"
  }), /*#__PURE__*/_react[\\"default\\"].createElement(LocalMsg, {
    id: \\"AtqwNy\\",
    defaultMessage: \\"[IMPERATIVE] with var\\",
    values: {
      _var: 1
    }
  }));
};
var StubImperativeLocalizationComponent = function StubImperativeLocalizationComponent() {
  return /*#__PURE__*/_react[\\"default\\"].createElement(_react[\\"default\\"].Fragment, null, (0, _localizationWrappers.localize)({
    id: \\"uohyBB\\",
    defaultMessage: \\"[IMPERATIVE]\\"
  }), (0, _localizationWrappers.localize)({
    id: \\"qXVQAv\\",
    defaultMessage: \\"[NON-IMPERATIVE] with var\\"
  }, {
    _var: 1
  }));
};"
`;

exports[`babel-plugin-formatjs-localized-bundle transformers code that has been compiled by nextjs 1`] = `
"\\"use strict\\";

exports.id = 885, exports.ids = [885, 26456], exports.modules = {
  359692: (e, t, n) => {
    var I = e => {
      var {
          strictLocalize: t
        } = (0, i.Pi)(),
        {
          backgroundColor: n = o.QY.surface.subdued,
          content: E,
          contentColor: _ = o.QY.text.default,
          notificationDot: a
        } = e,
        l = t({
          id: \\"J8xC2I\\",
          defaultMessage: {
            \\"type\\": 0,
            \\"value\\": \\"mit Benachrichtigung\\"
          }
        });
      return (0, r.jsxs)(A, {
        backgroundColor: n,
        contentColor: _,
        \\"data-test-id\\": e[\\"data-test-id\\"],
        className: e.className,
        children: [E > 99 ? \\"99+\\" : E, a ? (0, r.jsxs)(r.Fragment, {
          children: [(0, r.jsx)(R, {
            children: l
          }), (0, r.jsx)(T, {
            children: (0, r.jsx)(O.P, {})
          })]
        }) : null]
      });
    };
  },
  200077: (t, e, i) => {
    var f = class extends m.Component {
      constructor(t) {
        super(t), this.updateCustomOptionReaction = (0, h.reaction)(() => this.props.value, t => {
          !this.isValueInOptions(t) && this.props.shouldUseCustomOption && (this.customOption.value = t, this.customOption.label = this.customOptionLabel, this.hasEditedCustomOption = !0);
        }), this.customQuantitySelection = !1, this.hasEditedCustomOption = !1, this.customOption = {
          value: \\"\\",
          label: this.props.strictLocalize({
            id: \\"dhKCUV\\",
            defaultMessage: {
              \\"type\\": 0,
              \\"value\\": \\"Individuelle Menge\\"
            }
          })
        };
      }
    };
  }
};"
`;

exports[`babel-plugin-formatjs-localized-bundle transpiles all types of messages 1`] = `
"var x = /*#__PURE__*/React.createElement(\\"div\\", null, /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"AST\\",
  defaultMessage: [{
    \\"type\\": 0,
    \\"value\\": \\"Commencé à \\"
  }, {
    \\"type\\": 1,
    \\"value\\": \\"firstYear\\"
  }, {
    \\"type\\": 0,
    \\"value\\": \\"-\\"
  }, {
    \\"type\\": 1,
    \\"value\\": \\"secondYear\\"
  }]
}), /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"FIRST_ID\\",
  defaultMessage: \\"NEW_TEXT\\"
}), /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"NEXT_ID\\",
  defaultMessage: \\"MORE_NEW_TEXT\\",
  values: {
    variable: \\"22\\"
  }
}), /*#__PURE__*/React.createElement(LocalMsg, {
  values: {
    variable: \\"33\\"
  },
  defaultMessage: \\"Default message {variable} 3\\"
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  defaultMessage: \\"Default message 1\\"
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  defaultMessage: \\"Default message {variable} 2\\",
  values: {
    variable: \\"22\\"
  }
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  id: \\"FIRST_ID_FORMATTED\\",
  values: {
    variable: \\"33\\"
  },
  defaultMessage: \\"Default message {variable} 3\\"
}), localize({
  defaultMessage: \\"NEW_TEXT_LOCALIZE\\",
  id: \\"FIRST_ID_LOCALIZE\\"
}), localize({
  defaultMessage: \\"MORE_NEW_TEXT_LOCALIZE\\",
  id: \\"NEXT_ID_LOCALIZE\\"
}, {
  variable: \\"55\\"
}), localize({
  defaultMessage: \\"Default message {variable} 6\\",
  description: \\"A\\"
}, {
  variable: \\"66\\"
}), localize({
  description: \\"B\\",
  defaultMessage: \\"Default message {variable} 7\\"
}, {
  variable: \\"77\\"
}), LocalizationStore.get().intl.formatMessage({
  description: \\"B\\",
  defaultMessage: \\"NEW_TEXT_INTL\\",
  id: \\"FIRST_ID_INTL\\"
}, {
  variable: \\"77\\"
}));"
`;

exports[`babel-plugin-formatjs-localized-bundle transpiles all types of messages from messages path 1`] = `
"var x = /*#__PURE__*/React.createElement(\\"div\\", null, /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"AST\\",
  defaultMessage: [{
    \\"type\\": 0,
    \\"value\\": \\"Commencé à \\"
  }, {
    \\"type\\": 1,
    \\"value\\": \\"firstYear\\"
  }, {
    \\"type\\": 0,
    \\"value\\": \\"-\\"
  }, {
    \\"type\\": 1,
    \\"value\\": \\"secondYear\\"
  }]
}), /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"FIRST_ID\\",
  defaultMessage: \\"NEW_TEXT\\"
}), /*#__PURE__*/React.createElement(LocalMsg, {
  id: \\"NEXT_ID\\",
  defaultMessage: \\"MORE_NEW_TEXT\\",
  values: {
    variable: \\"22\\"
  }
}), /*#__PURE__*/React.createElement(LocalMsg, {
  values: {
    variable: \\"33\\"
  },
  defaultMessage: \\"Default message {variable} 3\\"
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  defaultMessage: \\"Default message 1\\"
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  defaultMessage: \\"Default message {variable} 2\\",
  values: {
    variable: \\"22\\"
  }
}), /*#__PURE__*/React.createElement(FormattedMessage, {
  id: \\"FIRST_ID_FORMATTED\\",
  values: {
    variable: \\"33\\"
  },
  defaultMessage: \\"Default message {variable} 3\\"
}), localize({
  defaultMessage: \\"NEW_TEXT_LOCALIZE\\",
  id: \\"FIRST_ID_LOCALIZE\\"
}), localize({
  defaultMessage: \\"MORE_NEW_TEXT_LOCALIZE\\",
  id: \\"NEXT_ID_LOCALIZE\\"
}, {
  variable: \\"55\\"
}), localize({
  defaultMessage: \\"Default message {variable} 6\\",
  description: \\"A\\"
}, {
  variable: \\"66\\"
}), localize({
  description: \\"B\\",
  defaultMessage: \\"Default message {variable} 7\\"
}, {
  variable: \\"77\\"
}), LocalizationStore.get().intl.formatMessage({
  description: \\"B\\",
  defaultMessage: \\"NEW_TEXT_INTL\\",
  id: \\"FIRST_ID_INTL\\"
}, {
  variable: \\"77\\"
}));"
`;
